aux_source_directory(. MEDIUM_SRC)
add_library(medium ${MEDIUM_SRC} 1733MinimumNumberofPeopletoTeach.cpp 840MagicSquaresInGrid.cpp 1552MagneticForceBetweenTwoBalls.cpp 1010PairsofSongsWithTotalDurationsDivisibleby60.cpp 687LongestUnivaluePath.cpp 662MaximumWidthofBinaryTree.cpp 437PathSumIII.cpp 222CountCompleteTreeNodes.cpp 623AddOneRowtoTree.cpp 849MaximizeDistancetoClosestPerson.cpp)